--- a/css/styles.css
+++ b/css/styles.css
@@ -589,7 +589,7 @@ header {
 	background-size: cover;
 }
 .background-image2 {
-	background: url(../images/Handknotted14.jpg) no-repeat center;
+	background: url(../images/Handknotted14.avif) no-repeat center;
 	height: 100%;
 	display: block;
 	width: 100%;
@@ -603,7 +603,7 @@ header {
 	background-size: cover;
 }
 .background-image3 {
-	background: url(../images/Handtufted05.jpg) no-repeat center;
+	background: url(../images/Handtufted05.avif) no-repeat center;
 	height: 100%;
 	display: block;
 	width: 100%;
@@ -631,7 +631,7 @@ header {
 	background-size: cover;
 }
 .background-image5 {
-	background: url(../images/food01-lg.jpg) no-repeat center;
+	background: url(../images/project2.avif) no-repeat center;
 	height: 100%;
 	display: block;
 	width: 100%;
@@ -659,7 +659,7 @@ header {
 	background-size: cover;
 }
 .background-image7 {
-	background: url(../images/fullscreen15.jpg) no-repeat center;
+	background: url(../images/fullscreen15.avif) no-repeat center;
 	height: 100%;
 	display: block;
 	width: 100%;
@@ -673,7 +673,7 @@ header {
 	background-size: cover;
 }
 .background-image8 {
-	background: url(../images/Handknotted111.jpg) no-repeat center;
+	background: url(../images/Handknotted111.avif) no-repeat center;
 	height: 100%;
 	display: block;
 	width: 100%;
