--- a/css/styles.css
+++ b/css/styles.css
@@ -278,6 +278,7 @@ h1#logo a {
 	display: block;
 	position: relative;
 	font-family: "Rufina", Arial, Helvetica, sans-serif;
+	font-display: swap;
 }
 h2 {
 	font-size: 48px;
@@ -307,6 +308,7 @@ h5 i, h4 i, h3 i, h2 i {
 	font-family: "Lora", Arial, Helvetica, sans-serif;
 	font-weight: 400;
 	font-style: italic;
+	font-display: swap;
 }
 .header {
 	margin-top: 0px;
@@ -410,6 +412,7 @@ h5 i, h4 i, h3 i, h2 i {
 	color: #2b2b2b;
 	content: "\f107";
 	font-family: FontAwesome;
+	font-display: swap;
 	opacity: 0.4;
 	-webkit-transition: .5s right, .5s opacity;
 	-moz-transition: .5s right, .5s opacity;
@@ -1422,6 +1425,7 @@ img {
 	font-weight: 600;
 	font-size: 24px;
 	letter-spacing: -0.5px;
+	font-display: swap;
 }
 .sliphoveritemTitle span {
 	font-size: 11px !important;
@@ -1433,11 +1437,13 @@ img {
 	padding-left: 1px;
 	display: block;
 	margin-bottom: 10px;
+	font-display: swap;
 }
 .sliphoveritemTitle i {
 	font-family: "Lora", Arial, Helvetica, sans-serif;
 	font-weight: 400;
 	font-style: italic;
+	font-display: swap;
 }
 .overlay {
 	display: block;
@@ -1696,6 +1702,7 @@ ul.pagination li a.active:hover {
 	padding-bottom: 0;
 	font-family: "Oswald", Arial, Helvetica, sans-serif;
 	letter-spacing: -2px;
+	font-display: swap;
 }
 .price-table p.price span {
 	font-size: 18px;
